[metadata]
name = skuba-update
version = file: VERSION
author = SUSE Containers Team
author_email = containers@suse.com
description = Utility to automatically refresh and update a SUSE CaaSP cluster nodes
long_description = Wraps zypper to refresh repositories and apply non interactive patches, including patches requiring reboot.
license = Apache License 2.0
keywords = CaaSP, kubernetes
url = https://github.com/SUSE/skuba
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Operating System :: POSIX :: Linux

[options]
packages = skuba_update

[options.entry_points]
console_scripts =
    skuba-update = skuba_update.skuba_update:main
